Sonar: fix reported issues